--- a/src/thank_you.html
+++ b/src/thank_you.html
@@ -3,9 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Happy Birthday Mamma!</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            color: white;
+        }
+
+        h1 {
+            font-size: 4rem;
+            margin: 50px 0 20px;
+            font-weight: bold;
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+        }
+
+        .image-container {
+            margin: 20px auto;
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+            overflow: hidden;
+            border: 5px solid white;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .button {
+            display: inline-block;
+            background-color: #ff6b6b;
+            color: white;
+            padding: 15px 30px;
+            font-size: 1.5rem;
+            font-weight: bold;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        .button:hover {
+            background-color: #ff4757;
+            transform: scale(1.1);
+        }
+
+        .emoji {
+            position: absolute;
+            font-size: 2rem;
+            opacity: 0;
+            animation: fly 3s ease-out forwards;
+        }
+
+        @keyframes fly {
+            0% {
+                transform: translateY(100vh) scale(0.5);
+                opacity: 1;
+            }
+            50% {
+                transform: translateY(-50vh) rotate(360deg);
+            }
+            100% {
+                transform: translateY(-120vh) scale(1.5);
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
 <body>
-    
+
+    <h1>Gratulerer med dagen mamma! 🎂🎉🎈</h1>
+
+    <div class="image-container">
+        <img src="https://www.google.com/imgres?q=susanna%20ahlander&imgurl=https%3A%2F%2Fholar.no%2Fwp-content%2Fuploads%2F2024%2F01%2FDSCF3516_SMALL.jpg&imgrefurl=https%3A%2F%2Fholar.no%2Fkontakt%2F&docid=X5Ig9Jz2avmIaM&tbnid=rCfdKuW-amP_0M&vet=12ahUKEwjh3Y2pj9KLAxVlYPEDHeq3AiAQM3oECHAQAA..i&w=1333&h=2000&hcb=2&ved=2ahUKEwjh3Y2pj9KLAxVlYPEDHeq3AiAQM3oECHAQAA" alt="Bursdagsbilde">
+    </div>
+
+    <button class="button" onclick="startCelebration()">Feir!</button>
+
+    <script>
+        function startCelebration() {
+            const emojis = ['🎉', '🎂', '🎈', '🎁', '💖', '🌹'];
+            for (let i = 0; i < 30; i++) {
+                const emoji = document.createElement('div');
+                emoji.classList.add('emoji');
+                emoji.innerText = emojis[Math.floor(Math.random() * emojis.length)];
+                emoji.style.left = `${Math.random() * 100}vw`;
+                emoji.style.bottom = '0';
+                emoji.style.animationDelay = `${Math.random() * 0.5}s`;
+                document.body.appendChild(emoji);
+
+                setTimeout(() => emoji.remove(), 3000);
+            }
+        }
+    </script>
+
 </body>
 </html>
